--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,10 +4,10 @@ html
 	body
 		.left-content
 			.perinfo.tc.mt30.mb30
-				-if(user.avatar)
+				-if(user.avatar._id != undefined)
 					img.avatar-120(src='data:image/#{user.avatar.type};base64,#{avatar}')
 				-else
-					img.avatar-120(src='/public/images/default/avatar.jpg')
+					img.avatar-120(src='/images/default/avatar.jpg')
 				p.username #{user.name}
 			ul.nav
 				li
