--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,10 +4,10 @@ html
 	body
 		.left-content
 			.perinfo.tc.mt30.mb30
-				-if(user.avatar.dataNull == undefined)
-					img.avatar-120(src='data:image/#{user.avatar.type};base64,#{user.avatar.dataStr}')
-				-else
+				-if(user.avatar.data == undefined)
 					img.avatar-120(src='/images/default/avatar.jpg')
+				-else
+					img.avatar-120(src='data:image/#{user.avatar.type};base64,#{user.avatar.dataStr}')
 				p.username #{user.name}
 			ul.nav
 				li
