新书速递，后台上传jade

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,9 +11,7 @@ html
 				p.username #{user.name}
 			ul.nav
 				li
-					a.no_unl(href='/') 首页
-				li
-					a.no_unl(href='/book/newbook') 新书速递
+					a.no_unl(href='/') 新书速递
 				li
 					a.no_unl(href='/book/serial') 最新连载
 				li
