--- a/views/index.jade
+++ b/views/index.jade
@@ -15,10 +15,10 @@ block content
 		div.bd
 			ul.serial
 				-for(var index = books.length - 1; index >= 0; --index)
-					li
-						img.cover(src='/images/books/#{books[index]._id}')
-						h3.title
-							a(href='/book/#{books[index]._id}') #{books[index].name_zh}
-						.intro #{books[index].intro}
-						-if(books[index].bookContent._time.minute)
+					-if(books[index].bookContent)
+						li
+							img.cover(src='/images/books/#{books[index]._id}')
+							h3.title
+								a(href='/book/#{books[index]._id}') #{books[index].name_zh}
+							.intro #{books[index].intro}
 							.time #{books[index].bookContent._time.minute}
