--- a/views/head.jade
+++ b/views/head.jade
@@ -2,6 +2,8 @@
 	title=title
 	link(rel='stylesheet', href='/stylesheets/base/base.css')
 	link(rel='stylesheet', href='/stylesheets/common/common.css')
+	link(rel='stylesheet', href='/stylesheets/common/selectize.default.css')
 	link(rel='stylesheet', href='/stylesheets/style.css')
-	script(src='http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js')
+	script(src='/javascripts/page/jquery-1.11.1.js')
+	script(src='/javascripts/page/selectize.js')
 	script(src='/javascripts/page/confirm_page.js')
