--- a/views/index.jade
+++ b/views/index.jade
@@ -19,7 +19,8 @@ block content
 						li
 							img.cover(src='/images/books/#{books[index]._id}')
 							h3.title
-								a(href='/book/#{books[index]._id}') #{books[index].name_zh}
-								a(href='') 修改新书信息[仅管理员可见]
+								a(href='/serial/#{books[index]._id}') #{books[index].name_zh}
+								-if(user.name == 'name')
+									a(href='') 修改新书信息[仅管理员可见]
 							.intro #{books[index].intro}
 							.time #{books[index].bookContent._time.minute}
