--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,11 +4,12 @@ html
 	body
 		.left-content
 			.perinfo.tc.mt30.mb30
-				-if(user.avatar.data == undefined)
-					img.avatar-120(src='/images/default/avatar.jpg')
-				-else
-					img.avatar-120(src='data:image/#{user.avatar.type};base64,#{user.avatar.dataStr}')
-				p.username #{user.name}
+				-if(user != null)
+					-if(user.avatar.data == undefined)
+						img.avatar-120(src='/images/default/avatar.jpg')
+					-else
+						img.avatar-120(src='data:image/#{user.avatar.type};base64,#{user.avatar.dataStr}')
+					p.username #{user.name}
 			ul.nav
 				li
 					a.no_unl(href='/') 新书速递
