--- a/views/user/reg.jade
+++ b/views/user/reg.jade
@@ -3,19 +3,18 @@
 extends ../layout
 block content
 	.main-content
-		h1= title
-		p Welcome to #{title}
-		form(method='post',action='/user/reg')
+		h2= title
+		form.form(method='post',action='/user/reg')
 			label 用户名：
-			input(name='name',value='name')
+			input.selectize-input(name='name',value='name')
 			br
 			label 密码：
-			input(type='text',name='password',value='')
+			input.selectize-input(type='text',name='password',value='')
 			br
 			label 确认密码：
-			input(type='text',name='password_re',value='')
+			input.selectize-input(type='text',name='password_re',value='')
 			br
 			label 邮箱：
-			input(type='text',name='email',value='')
+			input.selectize-input(type='text',name='email',value='')
 			br
-			input(type='submit')
+			input.btn.reg(type='submit',value='立即注册')
