--- a/views/index.jade
+++ b/views/index.jade
@@ -17,10 +17,10 @@ block content
 				-for(var index = books.length - 1; index >= 0; --index)
 					-if(books[index].bookContent)
 						li
-							img.cover(src='/images/books/#{books[index]._id}')
+							img.cover(src='data:#books[index].cover.contentType;base64,#{books[index].cover.data.toString("base64")}')
 							h3.title
 								a(href='/serial/#{books[index]._id}') #{books[index].name_zh}
-								-if(user.name == 'name')
+								-if(user && user.name == 'name')
 									a(href='') 修改新书信息[仅管理员可见]
 							.intro #{books[index].intro}
 							.time #{books[index].bookContent._time.minute}
