--- a/views/user/perInfo.jade
+++ b/views/user/perInfo.jade
@@ -28,21 +28,21 @@ block content
 			ul
 				-for(var i = 0, j = user.wish.length; i < j; i++)
 					li
-						a.mr10(href='/book/#{user.bookId[i]._id}',title='#{user.bookId[i].name_zh}') #{user.bookId[i].name_zh}
+						a.mr10(href='/serial/#{user.bookId[i]._id}',title='#{user.bookId[i].name_zh}') #{user.bookId[i].name_zh}
 		.myreaded
 			.title 我读过的书
 			-if(user.readed.length)
 			ul
 				-for(var i = 0, j = user.readed.length; i < j; i++)
 					li
-						a.mr10(href='/book/#{user.readed[i]._id}',title='#{user.readed[i].name_zh}') #{user.readed[i].name_zh}
+						a.mr10(href='/serial/#{user.readed[i]._id}',title='#{user.readed[i].name_zh}') #{user.readed[i].name_zh}
 		.myreading
 			.title 我正在读的
 			-if(user.reading.length)
 			ul
 				-for(var i = 0, j = user.reading.length; i < j; i++)
 					li
-						a.mr10(href='/book/#{user.reading[i]._id}',title='#{user.reading[i].name_zh}') #{user.reading[i].name_zh}
+						a.mr10(href='/serial/#{user.reading[i]._id}',title='#{user.reading[i].name_zh}') #{user.reading[i].name_zh}
 		form.postuserAvatar.w200.fl(method='post',action='/user/userAvatar',enctype='multipart/form-data')
 			progress#progressBar(value='0',max='100')
 			span#percentage
