修改描述时 头像没有读取到V 完成修改图片时及时显示V 同时书的描述里面图片是错误的V 修改描述时去掉alert提示V 或者将提示信息都整理一遍 让flash正常运行**** 修改本页内容的权限限制V 我要写书评的样式V 修改连载书籍的时候修改封皮有问题V

--- a/views/book/upbookDescribe.jade
+++ b/views/book/upbookDescribe.jade
@@ -13,8 +13,9 @@ block content
 				textarea#intro(rows='10',cols='20',name='content')=book.intro
 				br
 				input#postDescribe(type='button',value='提交')
-			form#formCover(method='post',action='/book/upbookCover/#{book._id}')
-				img.coverImg(src='/images/books/#{book._id}',width='110',height='146')
+			form#formCover(method='post',action='/book/upbookCover/#{book._id}',enctype='multipart/form-data')
+				img.coverImg(src='data:#{book.cover.contentType};base64,#{book.cover.data.toString("base64")}',width='110',height='146')
+				input(type='hidden',name='id',value='#{book._id}')
 				label 封面：
 					input#cover(type='file',name='cover')
 				br
