--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -43,6 +43,13 @@ a {
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff008fd8', endColorstr='#ff0075cf', GradientType=0);
 }
 
+.overdot{
+	white-space:nowrap;
+	text-overflow:ellipsis;
+	-o-text-overflow:ellipsis;
+	overflow:hidden;
+}
+
 /*头像尺寸*/
 .avatar{width: 76px; height: 76px; border: 0; vertical-align: top;}
 .avatar-120{width: 128px; height: 128px; border-radius: 50%; margin-bottom: 10px;border: 2px solid #95a153;padding: 5px;}
@@ -65,7 +72,7 @@ a {
 
 /*book List*/
 .serial{font-size: 14px;}
-.serial li{display: inline-block; *display: inline; *zoom: 1; width: 160px; margin-right: 10px; vertical-align: top;}
+.serial li{display: inline-block; *display: inline; *zoom: 1; width: 160px; margin-right: 10px; vertical-align: top; margin-bottom: 30px;}
 .serial li .title{font-size: 16px;}
 .serial li .title a:hover{color: #fff; background: #0590C7;}
 .serial li .intro{color: #666;}
@@ -77,6 +84,8 @@ a {
 .reviewer li a.avatar{position: absolute;}
 .reviewer li a img{width: 96px; height: 96px; vertical-align: top;}
 .reviewer li .userInfo{margin-left: 110px;}
+.reviewer li .commentContent{position: relative;}
+.reviewer li .more{width: 33px; position: absolute;right: 0; top: 40px;}
 
 /*paperbook list*/
 .paperBook li{display: inline-block; *display: inline; *zoom: 1; position: relative; margin-right: 30px; margin-bottom: 40px; vertical-align: top;}
@@ -97,3 +106,55 @@ a {
 */
 .form{width: 240px;}
 .login,.reg{margin-top: 20px; float: right;}
+
+/**
+*写书评的全屏
+*/
+.fullBg{position: fixed; top: 0; right: 0; bottom: 0; left: 0; background: rgba(0,0,0,.5);}
+
+.comment{width: 460px; height: 310px; border-radius: 10px; border:5px solid #e0e0e0; position: absolute; margin-left: -250px; margin-top: -175px; left: 50%; top: 50%; background: #fff; padding: 20px;}
+.comment .close{position: absolute; right: 5px; top: -6px; font-size: 32px; cursor: pointer; color: #888;}
+.comment .close:hover{color: #555;}
+.comment h3{margin-bottom: 30px;}
+.comment label{display: block; margin-bottom: 30px;}
+.comment .btn{float: right;}
+
+/**
+*查看书评的动画全屏
+*/
+.moreBox{width: 460px; height: 350px; border-radius: 10px; border:5px solid #e0e0e0; position: absolute; margin-left: -250px; margin-top: -195px; left: 50%; top: 50%; background: #fff; padding: 20px; overflow-y: scroll;}
+.moreBox .close{position: absolute; right: 5px; top: -6px; font-size: 32px; cursor: pointer; color: #888;}
+.moreBox .close:hover{color: #555;}
+
+/***
+*窗口弹出动画
+*书评人查看更多的nore更多动画
+*/
+.showdialog{
+-webkit-animation:pulse .5s 0s ease both;
+-moz-animation:pulse .5s 0s ease both;}
+@-webkit-keyframes pulse{
+0%{-webkit-transform:scale(0)}
+100%{-webkit-transform:scale(1)}
+}
+@-moz-keyframes pulse{
+0%{-moz-transform:scale(0)}
+100%{-moz-transform:scale(1)}
+}
+.showmore{
+-webkit-animation:tada 1s .2s ease both;
+-moz-animation:tada 1s .2s ease both;}
+@-webkit-keyframes tada{
+0%{-webkit-transform:scale(1)}
+10%,20%{-webkit-transform:scale(0.9) rotate(-3deg)}
+30%,50%,70%,90%{-webkit-transform:scale(1.1) rotate(3deg)}
+40%,60%,80%{-webkit-transform:scale(1.1) rotate(-3deg)}
+100%{-webkit-transform:scale(1) rotate(0)}
+}
+@-moz-keyframes tada{
+0%{-moz-transform:scale(1)}
+10%,20%{-moz-transform:scale(0.9) rotate(-3deg)}
+30%,50%,70%,90%{-moz-transform:scale(1.1) rotate(3deg)}
+40%,60%,80%{-moz-transform:scale(1.1) rotate(-3deg)}
+100%{-moz-transform:scale(1) rotate(0)}
+}
