--- a/views/book/bookContent.jade
+++ b/views/book/bookContent.jade
@@ -8,7 +8,8 @@ block content
 					a#comment-btn(href='javascript:;',target='_blank') 我要写书评
 				-for(var i = 0; i < book.bookContent.contents.length; ++i)
 					.page(data-page=i+1) !{book.bookContent.contents[i].content}
-						a(href='/book/upbookContent/'+book._id+'/'+(i+1)) 修改本页
+						-if(user.name == book.publisher)
+							a(href='/book/upbookContent/'+book._id+'/'+(i+1)) 修改本页
 			-else if(user === null)
 					p 这本书的贡献者还没有来得及上传内容哦～（拦截信息没有显示）
 					a(href='') 提醒TA上传
@@ -17,14 +18,16 @@ block content
 			-if(error)
 				p=error
 		.comment.none
+			.close#close ×
+			h3 我要为《#{book.name_zh}》写书评
 			form#comment(method='get',action='/book/comment')
 				input#bookId(type='hidden',value='#{book._id}',name='bookId')
 				input#userId(type='hidden',value='#{user._id}',name='userId')
 				label
 					标题：
-					input.title(type='text',name='title')
+					input.title.selectize-input(type='text',name='title')
 				label
 					内容：
-					textarea.content(name='commentContent')
-				input#commit-btn(type='button',value='提交')
+					textarea.content.selectize-input(name='commentContent')
+				input#commit-btn.btn(type='button',value='提交')
 		script(type='text/javascript',src='/javascripts/page/commitContent.js')
