--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -122,7 +122,7 @@ a {
 /**
 *查看书评的动画全屏
 */
-.moreBox{width: 460px; height: 350px; border-radius: 10px; border:5px solid #e0e0e0; position: absolute; margin-left: -250px; margin-top: -195px; left: 50%; top: 50%; background: #fff; padding: 20px; overflow-y: scroll;}
+.moreBox{width: 460px; height: 350px; border-radius: 10px; border:5px solid #e0e0e0; position: absolute; margin-left: -250px; margin-top: -195px; left: 50%; top: 50%; background: #fff; padding: 20px; overflow-y: auto;}
 .moreBox .close{position: absolute; right: 5px; top: -6px; font-size: 32px; cursor: pointer; color: #888;}
 .moreBox .close:hover{color: #555;}
 
