--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,13 @@ doctype html
 html
 	include head
 	body
+		.bdsharebuttonbox
+			a.bds_more(href='#',data-cmd="more")
+			a.bds_qzone(href='#',data-cmd="qzone",title="分享到QQ空间")
+			a.bds_tsina(href='#',data-cmd="tsina",title="分享到新浪微博")
+			a.bds_tqq(href='#',data-cmd="tqq",title="分享到腾讯微博")
+			a.bds_renren(href='#',data-cmd="renren",title="分享到人人网")
+			a.bds_weixin(href='#',data-cmd="weixin",title="分享到微信")
 		.left-content
 			.perinfo.tc.mt30.mb30
 				-if(user != null)
@@ -27,4 +34,6 @@ html
 						a.no_unl(href='/user/login') 登录
 					li
 						a.no_unl(href='/user/reg') 注册
+		script.
+			window._bd_share_config={"common":{"bdSnsKey":{},"bdText":"","bdMini":"2","bdMiniList":false,"bdPic":"","bdStyle":"1","bdSize":"32"},"share":{},"image":{"viewList":["qzone","tsina","tqq","renren","weixin"],"viewText":"分享到：","viewSize":"16"},"selectShare":{"bdContainerClass":null,"bdSelectMiniList":["qzone","tsina","tqq","renren","weixin"]}};with(document)0[(getElementsByTagName('head')[0]||body).appendChild(createElement('script')).src='http://bdimg.share.baidu.com/static/api/js/share.js?v=89860593.js?cdnversion='+~(-new Date()/36e5)];
 		block content
