--- a/views/index.jade
+++ b/views/index.jade
@@ -17,7 +17,7 @@ block content
 				-for(var index = books.length - 1; index >= 0; --index)
 					-if(books[index].bookContent)
 						li
-							img.cover(src='data:#books[index].cover.contentType;base64,#{books[index].cover.data.toString("base64")}')
+							img.cover(src='data:image/#{books[index].cover.contentType};base64,#{books[index].cover.data.toString("base64")}')
 							h3.title.overdot
 								a(href='/serial/#{books[index]._id}') #{books[index].name_zh}
 								-if(user && user.name == 'name')
